@@ -4039,3 +4039,4 @@
   EntityDefinition.getResultPacker() and Property.ColumnProperty.getResultPacker() added
   H2Database.runScript() updated according to H2 api changes
   H2Database, in memory database initialization moved from static initializer to constructor
+  TextInputPanel now JTextField based
